header no longer gets overlapped on phones

--- a/styles/Browse.module.scss
+++ b/styles/Browse.module.scss
@@ -2,5 +2,5 @@
   display: flex;
   flex-direction: column;
   gap: 4vw;
-  transform: translateY(-8rem);
+  transform: translateY(-6vw);
 }
