--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: 2rem;
+  gap: 2vw;
 
   width: 100%;
   height: calc(100vw / 1.77); // temp
